--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "songs",
   "version": "0.0.0",
   "dependencies": {
+    "express": "~3.4.3",
+    "winston": "~0.7.2",
+    "mongodb": "~1.3.19",
+    "yaml-config": "~0.3.0"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
