--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "ember": "1.0.0",
     "ember-data-shim": "1.0.0-beta.2",
-    "reveal.js": "~2.5.0"
+    "reveal.js": "https://github.com/hakimel/reveal.js.git#c4d7b1b93fb06d152fe44d4a5ae42bfa0257e4ea"
   },
   "devDependencies": {
     "ember-mocha-adapter": "0.1.2"
