--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "express": "~3.4.3",
     "winston": "~0.7.2",
     "mongodb": "~1.3.19",
-    "yaml-config": "~0.3.0"
+    "yaml-config": "~0.3.0",
+    "q": "~0.9.7"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
