--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "Lyrical",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "a Sails application",
   "dependencies": {
     "sails": "0.9.8",
     "grunt": "0.4.1",
     "sails-disk": "~0.9.0",
-    "ejs": "0.8.4",
     "optimist": "0.3.4",
-    "handlebars": "~1.1.2"
+    "handlebars": "~1.1.2",
+    "sails-mongo": "^0.9.7"
   },
   "scripts": {
     "start": "node app.js",
